# New-Printf

./: CMakeLists.txt  Makefile  a.out  ft_base_conversions.c  ft_handle_char.c  ft_handle_hexa.c  ft_handle_hexa_opts.c  ft_handle_modulo.c  ft_handle_nb_opts.c  ft_handle_numbers.c  ft_handle_opt.c  ft_handle_options.c  ft_handle_opts.c  ft_printf.h  ft_printf_utils.c  ft_printf_utils_2.c  ft_putchar.c  ft_putnbr.c  ft_putstr.c  initialize_structs.c  main.c  parse.c  parse_opt.c  parse_options.c  parse_opts.c  tips
